# gitmoji-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  maintenance.yml  security.yml
.github/actions/pre-commit/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml  first-interaction.yml  on_pr.yml  on_push.yml  pre-commit.yml  tests.yml
src/gitmoji_pre_commit/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py  test_integration.py
