[project]
name = "gitmoji-pre-commit"
version = "0.1.0"
description = "A pre-commit hook checking if your commit messages comply with the gitmoji convention"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [  ]

[tool.ruff]
line-length = 88

lint.select = [
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # Pydocstyle
  "E",   # Pycodestyle errors
  "F",   # Pyflakes
  "I",   # Isort
  "N",   # Pep8 Naming Conventions
  "SIM", # flake8-simplify
  "W",   # Pycodestyle warnings
]
lint.ignore = [
  "ANN101", # Missing type annotation for self in method  (deprecated and not needed)
  "ANN204", # Missing return type annotation for special method (like __str__)
  "ANN401", # Use of the Any type (sometimes you need it)
  "D105",   # Missing docstring in special method (like __str__)
]
lint.per-file-ignores."__init__.py" = [ "D104" ] # Missing docstring in public package

# __init__.py files are not required to have docstrings
lint.pydocstyle.convention = "google"
lint.pydocstyle.ignore-decorators = [ "property", "reflex.var" ]

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "ruff>=0.7.3",
]
